--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -230,7 +230,7 @@ a span {
   margin-bottom: -15px;
 }
 
-.card-text-up-most-rev {
+.card-text-up-most-rev { // May be eliminated
   position: relative;
   margin-top: -20px;
   margin-bottom: -4px;
@@ -403,4 +403,74 @@ a span {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+}
+
+// Corner Arrow for Cards
+
+.arrow-top-reviewed {
+  background-color: #d4af37;
+  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
+  height: 120px;
+  left: -70px;
+  position: absolute;
+  top: -70px;
+  width: 180px;
+
+  -webkit-transform: rotate(-45deg);
+}
+
+.arrow-top-reviewed span {
+  color: #f5f5f5;
+  font-family: sans-serif;
+  font-size: 1em;
+  left: 45px;
+  top: 68px;
+  position: absolute;
+  width: 50px;
+}
+
+.arrow-most-reviewed {
+  background-color: #4d8647;
+  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
+  height: 120px;
+  left: -70px;
+  position: absolute;
+  top: -70px;
+  width: 180px;
+
+  -webkit-transform: rotate(-45deg);
+}
+
+.arrow-most-reviewed span {
+  color: #f5f5f5;
+  font-family: sans-serif;
+  font-size: 1em;
+  text-align: center;
+  left: 33px;
+  top: 68px;
+  position: absolute;
+  width: 70px;
+}
+
+.arrow-new {
+  background-color: #62da4f;
+  // box-shadow: 0 0 3px 2px rgba(0,0,0,0.8);
+  height: 120px;
+  left: -70px;
+  position: absolute;
+  top: -70px;
+  width: 180px;
+
+  -webkit-transform: rotate(-45deg);
+}
+
+.arrow-new span {
+  color: #f5f5f5;
+  font-family: sans-serif;
+  font-size: 1em;
+  text-align: center;
+  left: 33px;
+  top: 80px;
+  position: absolute;
+  width: 70px;
 }
