--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,21 +23,25 @@
 
   <div class="reviews-container">
 
-  <ul>
-    <div class="reviews-ul review-card ">
-    <% @product_reviews.each do |review| %>
-      <% _user = User.find_by(id: review.user_id) %>
-      <% if _user.avatar_pic.attached? %>
-        <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
-        <% else %>
-          <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
-      <% end %>
-      <li>
-        <%= link_to review.author, product_review_path(@product, review), class:"reviews-li"  %>
-      </li>
-    <% end %>
-  </ul>
-</div>   
+    <ul>
+      <div class="reviews-ul">
+        <% @product_reviews.each do |review| %>
+          <div class="review-card">
+            <% _user = User.find_by(id: review.user_id) %>
+            <% if _user.avatar_pic.attached? %>
+              <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
+              <% else %>
+                <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
+            <% end %>
+            <li>
+              <%= link_to review.author, product_review_path(@product, review), class:"reviews-li"  %>
+            </li>
+          </div>
+        <% end %>
+      </div>
+    </ul>
+
+  </div>   
 <% else %>
   <p>No reviews are listed for this product.</p>
 <% end %>
