--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -3,15 +3,23 @@
 <div class="reviews-container">
   <% if @reviews.any? %>
     <ul>
-      <div class="reviews-ul review-card ">
+      <div class="reviews-ul">
         <% @reviews.each do |review| %>
-          <% _user = User.find_by(id: review.user_id) %>
-            <% if _user.avatar_pic.attached? %>
-              <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
-              <% else %>
-                <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
-            <% end %>
-          <li><%= link_to review.author, review_path(id: review, product_id: review.product_id), class:"reviews-li" %></li> 
+          <div class="review-card">
+            <div class="review-card-flex">
+              <% _user = User.find_by(id: review.user_id) %>
+                <% if _user.avatar_pic.attached? %>
+                  <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
+                  <% else %>
+                    <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
+                <% end %>
+              <li><%= link_to review.author, review_path(id: review, product_id: review.product_id) %>
+              </li>
+              <p>On <%= review.created_at.strftime('%m-%d-%Y') %></p>
+              <div class="flex-break"></div>
+              <div class="stars review-stars" style="--rating: <%= review.rating %>;" aria-label="Rating of this review is " <%= review.rating %> " out of 5."></div>
+            </div>  
+          </div> 
         <% end %>
       </div>  
     </ul>
