--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,7 +281,7 @@ a span {
   width: 500px;
   height: 100px;
   border: 1px;
-  padding: .5% .5% .5% .5%;
+  padding: 5px 5px 5px 5px;
   padding-bottom: 5px;
   border-radius: 5px;
   border: 1.5px solid #CBCBCB;
@@ -299,20 +299,17 @@ a span {
     margin-left: auto;
   }
 
-  & > .flex-break {
-    flex-basis: 100%;
-    height: 0;
-  }
-
-  & > .review-stars {
-    justify-content: center;
-    align-items: center;
-  }
+  // & > .flex-break {
+  //   flex-basis: 100%;
+  //   height: 0;
+  // }
 
 }
 
-
-
+.review-stars {
+  text-align: center;
+  margin-top: -18px;
+}
 
 
 // Will Paginate Styling
