--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -302,16 +302,7 @@ body::-webkit-scrollbar-thumb {
   border-top: 3px solid #65e252;
   text-align: left;
   overflow: scroll;
-
-  & > .scrollable-element {
-    scrollbar-face-color: #000000;
-    scrollbar-shadow-color: #2D2C4D;
-    scrollbar-highlight-color:#7D7E94;
-    scrollbar-3dlight-color: #7D7E94;
-    scrollbar-darkshadow-color: #2D2C4D;
-    scrollbar-track-color: #7D7E94;
-    scrollbar-arrow-color: #C1C1D1; 
-  }
+  margin-bottom: 5px;
 }
 
 .review-card-flex {
