--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -7,7 +7,7 @@
         <% @reviews.each do |review| %>
           <div class="review-card">
             <div class="review-card-flex">
-              <% _user = User.find_by(id: review.user_id) %>
+              <% _user = @users.find_by(id: review.user_id) %>
                 <% if _user.avatar_pic.attached? %>
                   <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
                   <% else %>
@@ -21,7 +21,16 @@
               <div class="stars" style="--rating: <%= review.rating %>;" aria-label="Rating of this review is " <%= review.rating %> " out of 5."></div>
             </div>
             <div class="review-index-text">
-              <%= review.content_body %>
+              <% _product = @products.find_by(id: review.product_id) %>
+              <% if _product.product_photo.attached? %>
+                <%= image_tag _product.product_photo, class:"product-image-tiny", alt: 'Product Image'  %>
+                <% else %>
+                  <%= image_tag 'image_not_available.webp', class:"card-image-not-found", alt: 'Image Not Found' %>
+              <% end %>
+              <%= _product.name %>
+              <%= ' from ' %>
+              <%= _product.country %>
+              <span class="review-card-spacer"><%= review.content_body  %></span>
             </div>
           </div> 
         <% end %>
