Layout of review card to the top line

--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -25,3 +25,10 @@
       <%= f.label "Admin?", name: 'admin_check', id: 'admin_check', class: "form-col-1" %>
       <%= f.check_box:admin %><br>
   <% end %>
+
+    <%= _product.name %>
+    <%= _product.country %>
+    <p> from </p>
+    <div class="review-card-spacer">
+      <%= review.content_body %>
+    <div>
