--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,11 +148,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .product-image-tiny {
-  width: 24px;
-  height: 24px;
+  width: 75px;
+  height: 75px;
   padding: 1px;
   border-radius: 5px;
   object-fit: cover;
+  margin-top: 10px;
 }
 
 // Footer Styles
@@ -180,7 +181,7 @@ body::-webkit-scrollbar-thumb {
   color: rgba(37, 37, 37, 0.416);
 }
 
-// UL to cards
+// Product card
 
 .products {
   display: grid;
@@ -302,7 +303,7 @@ body::-webkit-scrollbar-thumb {
 .review-card {
   padding: 10px;
   width: 100%;
-  height: 100px;
+  height: 182px;
   border: 1px;
   padding: 5px 5px 0px 5px;
   border-radius: 5px;
@@ -316,23 +317,26 @@ body::-webkit-scrollbar-thumb {
 .review-card-flex {
   display: flex;
   justify-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 
   & > p {
     margin-left: auto;
   }
 
+  & > .review-product {
+    position: relative;
+    justify-content: center;
+    margin: 0px auto;
+  }
+  
 }
+
 
 .review-stars {
-  text-align: center;
-  margin-top: -18px;
+  text-align: left;
+  margin-top: -12px;
 }
-
-.review-card-spacer {
-  padding-left: 15px;
-}
-
 
 
 // Will Paginate Styling
