--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -14,23 +14,25 @@
                     <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
                 <% end %>
               <%= link_to review.author, review_path(id: review, product_id: review.product_id) %>
-
+              <div class="review-product">
+                <% _product = @products.find_by(id: review.product_id) %>
+                <%= link_to _product.name, product_path(_product) %>
+                <%= ' from ' %>
+                <%= _product.country %>
+              </div>
               <p>On <%= review.created_at.strftime('%m-%d-%Y') %></p>
             </div>
             <div class="review-stars">  
               <div class="stars" style="--rating: <%= review.rating %>;" aria-label="Rating of this review is " <%= review.rating %> " out of 5."></div>
             </div>
             <div class="review-index-text">
-              <% _product = @products.find_by(id: review.product_id) %>
+              <%= review.content_body  %>
+              <div></div>
               <% if _product.product_photo.attached? %>
                 <%= image_tag _product.product_photo, class:"product-image-tiny", alt: 'Product Image'  %>
                 <% else %>
                   <%= image_tag 'image_not_available.webp', class:"card-image-not-found", alt: 'Image Not Found' %>
               <% end %>
-              <%= _product.name %>
-              <%= ' from ' %>
-              <%= _product.country %>
-              <span class="review-card-spacer"><%= review.content_body  %></span>
             </div>
           </div> 
         <% end %>
