--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -7,20 +7,24 @@
         <% @reviews.each do |review| %>
           <div class="review-card">
             <div class="review-card-flex">
-              <% _user = @users.find_by(id: review.user_id) %>
-                <% if _user.avatar_pic.attached? %>
-                  <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
-                  <% else %>
-                    <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
-                <% end %>
-              <%= link_to review.author, review_path(id: review, product_id: review.product_id) %>
-              <div class="review-product">
+              <div class="review-box1">
+                <% _user = @users.find_by(id: review.user_id) %>
+                  <% if _user.avatar_pic.attached? %>
+                    <%= image_tag _user.avatar_pic, class:"avatar-tiny", alt: 'User Avatar'  %>
+                    <% else %>
+                      <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
+                  <% end %>
+                <%= link_to review.author, review_path(id: review, product_id: review.product_id) %>
+              </div>
+              <div class="review-box2">
                 <% _product = @products.find_by(id: review.product_id) %>
                 <%= link_to _product.name, product_path(_product) %>
                 <%= ' from ' %>
                 <%= _product.country %>
               </div>
-              <p>On <%= review.created_at.strftime('%m-%d-%Y') %></p>
+              <div class="review-box3">
+                <p>On <%= review.created_at.strftime('%m-%d-%Y') %></p>
+              </div>
             </div>
             <div class="review-stars">  
               <div class="stars" style="--rating: <%= review.rating %>;" aria-label="Rating of this review is " <%= review.rating %> " out of 5."></div>
