--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,9 @@
       <div class="header-top-left">Mario's Specialty Food Products</div>
       <div class="authentication-position">
         <% if current_user %>
-            <% if current_user.avatar_pic.attached? %>
-              <%= image_tag current_user.avatar_pic, class:"avatar-tiny" %>
-              <% else %>
-              <%= image_tag 'generc_profile_pic.webp', class:"avatar-tiny", alt: 'Avatar Not Found ' %>
-            <% end %>
+
+          <%= render partial: "layouts/avatar", locals: { user: current_user } %>
+
           <%= link_to current_user.email, user_path(current_user)%>
           <p class="authentication-text"> | </p>
           <a class="authentication-text" href="/signout">Sign Out</a>
