--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,6 @@
 <h1 class="center">Your Profile</h1>
 
-  <% if current_user.avatar_pic.attached? %>
-    <%= image_tag current_user.avatar_pic, class:"avatar" %><br>
-    <% else %>
-    <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
-  <% end %>
+  <%= render partial: "shared/avatar_big", local: { current_user: current_user }%>
 
   <p>User Name: <%= @user.user_name %></p>
   <p>Email: <%= @user.email %></p><br><br><br>
