Edit all views for move of partials to shared folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 
   <body>
 
-    <%= render "layouts/header" %>
-    <%= render "layouts/navbar" %>
+    <%= render "shared/header" %>
+    <%= render "shared/navbar" %>
 
     <div class="container">
 
