--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 
   <% if @products.any? %>
 
-    <%= render "products/product-card" %>
+    <%= render "shared/product-card" %>
 
   <% else %>
     <p>There are no products yet.</p>
