--- a/app/views/shared/_review_avatar.html.erb
+++ b/app/views/shared/_review_avatar.html.erb
@@ -1,5 +1,5 @@
   
 
-  <%= render partial: "layouts/avatar", locals: { user: user } %>
+  <%= render partial: "shared/avatar", locals: { user: user } %>
 
   <%= link_to review.author, review_path(id: review, product_id: review.product_id) %> 
