--- a/app/views/shared/_review_stars.html.erb
+++ b/app/views/shared/_review_stars.html.erb
@@ -1,3 +1,2 @@
-  <div class="review-stars">  
-    <div class="stars" style="--rating: <%= review.rating %>;" aria-label="Rating of this review is " <%= review.rating %> " out of 5."></div>
-  </div>
+   
+    <div class="stars" style="--rating: <%= review %>;" aria-label="Rating of this review is " <%= review %> " out of 5."></div>
