Update product show view

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
 <% if @product.reviews.any? %>
-  <h4>Here are the reviews for this product:</h4>
+  <h4>Reviews for this product:</h4>
 
   <div class="reviews-container">
     <div class="reviews-ul">
