--- a/app/views/shared/_form_edit_user.html.erb
+++ b/app/views/shared/_form_edit_user.html.erb
@@ -2,11 +2,8 @@
   <%= form_for @user do |f| %>
     <div class="user-form-grid-container">
       <div class="form-col-1">
-        <% if current_user.avatar_pic.attached? %>
-          <%= image_tag current_user.avatar_pic, class:"avatar" %><br>
-          <% else %>
-          <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
-        <% end %>
+
+        <%= render partial: "shared/avatar_big", local: { current_user: current_user }%>
 
         <%= f.label "Upload Avatar Image" %><br>
         <%= f.file_field :avatar_pic %><br>
