--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -261,6 +261,33 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: -4px;
 }
 
+// Product Card Show
+
+.card-show {
+  // position: relative;
+  padding: 10px;
+  width: 800px;
+  height: 600px;
+  background-color: white;
+  padding: 0% 0% 0% 0%;
+  padding-bottom: 1px;
+  border-radius: 5px;
+  border: 1.5px solid #CBCBCB;
+  border-top: 3px solid #419234;
+  text-align: center;
+  overflow: hidden;
+  // min-width: none;
+}
+
+.card-image-show {
+  padding: 1px;
+  border-radius: 5px;
+  width: 800px;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 // Product Page Styles
 
 .centered-header {
@@ -338,6 +365,31 @@ body::-webkit-scrollbar-thumb {
 .review-stars {
   text-align: left;
   margin-top: -12px;
+}
+
+// Product Show Card flexbox
+
+.product-show-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  & > .review-box1 { // avatar
+    order: 1;
+    // align-content: center;
+    
+  }
+
+  & > .review-box2 { // product info
+    order: 2;
+    // width: 100%;
+  }
+
+  & > .review-box3 { //date
+    order: 3;
+    // align-content: center;
+  }
+  
 }
 
 
@@ -534,4 +586,30 @@ body::-webkit-scrollbar-thumb {
   width: 70px;
 }
 
+// Next and Previous Arrows
 
+.previous-next {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 32px;
+}
+
+.previous-next:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.next {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.round {
+  border-radius: 50%;
+}
