--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,13 +15,27 @@
 
 </div>
 
-<div class="centered-header">
+<div class="centered-header margin-spacer">
   <%= link_to "Add Your Review", new_product_review_path(@product), class: "btn btn-success" %>
-</div>
 
+</div>
+  <% if current_user && current_user.admin %>
+    <div class="margin-spacer admin-card">
+      <div class="centered-header">
+        <h3>Admin Only</h3>
+      </div>
+      <p><%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %></p>
+      <p><%= link_to "Delete product", product_path(@product), class: "btn btn-success", 
+                              :data => {:confirm => "Are you sure?",
+                                            :method => "delete"} %></p>
+    </div>
+  <% end %>
 
 <% if @product.reviews.any? %>
+
+<div class="margin-spacer">
   <h2>Reviews for this product:</h2>
+</div>
 
   <div class="reviews-container">
     <div class="reviews-ul">
@@ -43,11 +57,3 @@
 
   </div>
 
-<% if current_user && current_user.admin %>
-  <h3>Admin Only</h3>
-  <p><%= link_to "Edit", edit_product_path(@product) %></p>
-  <p><%= link_to "Delete product", product_path(@product),
-                          :data => {:confirm => "Are you sure?",
-                                         :method => "delete"} %></p>
-
-<% end %>
