Set styles for all admin sections

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
 
 </div>
   <% if current_user && current_user.admin %>
-    <div class="margin-spacer admin-card">
+    <div class="margin-spacer admin-card-2btn">
       <div class="centered-header">
         <h3>Admin Only</h3>
       </div>
