--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -622,7 +622,20 @@ body::-webkit-scrollbar-thumb {
 
 // Admin Card
 
-.admin-card {
+.admin-card-1btn {
+  padding: 10px;
+  width: 100%;
+  height: 100px;
+  border: 1px;
+  padding: 5px 5px 0px 5px;
+  border-radius: 5px;
+  border: 1.5px solid #CBCBCB;
+  border-top: 3px solid #c3df2a;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.admin-card-2btn {
   padding: 10px;
   width: 100%;
   height: 150px;
