--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,14 @@
 <h1 class="centered-header">Our Products</h1>
 
+<% if current_user && current_user.admin %>
+  <div class="margin-spacer admin-card-1btn">
+    <div class="centered-header">
+      <h3>Admin Only</h3>
+    </div>
+    <p><%= link_to "Create new product", new_product_path, class: "btn btn-success" %></p>
+  </div>
+<% end %>
+
 <div class="products">
 
   <% if @products.any? %>
@@ -12,10 +21,6 @@
 
 </div>
 
-  <% if current_user && current_user.admin %>
-    <h3>Admin Only</h3>
-    <p><%= link_to "Create new product", new_product_path %></p>
-  <% end %>
 
 <div class="pagination">
   <%= will_paginate @products %>
