--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -296,25 +296,25 @@ body::-webkit-scrollbar-thumb {
 
 // User Forms
 
-.user-form-grid-container {
+.user-form-flex-container {
   padding: 2rem;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "left-col right-col";
-  // grid-template-columns: 1fr 1fr;
-  grid-gap: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .form-col-2 {
-  grid-area: left-col;
+  order: 2;
   border: 1px;
+  max-width: 400px;
+  flex-basis: fit-content;
 }
 
 .form-col-1 {
-  grid-area: right-col;
+  order: 1;
   border: 1px;
+  max-width: 230px;
+  flex-basis: fit-content;
 }
 
 // Reviews Styles
@@ -620,7 +620,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 50%;
 }
 
-// Admin Card
+// Admin Cards
 
 .admin-card-1btn {
   padding: 10px;
