--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -57,3 +57,26 @@
 <p>Imported From <%= @product.country %></p>
 
 <%= render partial: "shared/product_image_big", locals: { product: @product } %>
+
+
+
+.user-form-grid-container {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "left-col right-col";
+  // grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.form-col-2 {
+  grid-area: right-col;
+  border: 1px;
+}
+
+.form-col-1 {
+  grid-area: left-col;
+  border: 1px;
+}
