--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,23 @@
 <div class="center">
   <h1>Your Profile</h1>
+  <div class="profile-flex">
+    <div class="show-col-1">
 
-  <%= render partial: "shared/avatar_big", local: { current_user: current_user }%>
+      <%= render partial: "shared/avatar_big", local: { current_user: current_user }%>
+      
 
-  <p>User Name: <%= @user.user_name %></p>
-  <p>Email: <%= @user.email %></p><br><br><br>
+    </div>
+
+    <div class="show-col-2">
+      <p>User Name:   <%= @user.user_name %></p>
+      <p>Email:   <%= @user.email %></p>
+    </div>
+  </div>  
 </div>  
 
 <% if current_user %>
-  <div class="centered-header">
-    <%= link_to 'Edit', edit_user_path(@user) %> |
-    <%= link_to 'Home', root_path %>
+  <div class="margin-spacer center">
+    <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-success" %> 
   </div>
 <% end %>
 
