--- a/app/views/shared/_form_new_user.html.erb
+++ b/app/views/shared/_form_new_user.html.erb
@@ -1,13 +1,14 @@
 
   <%= form_for @user do |f| %>
     <div class="user-form-flex-container">
-      <div class="form-col-1">
-        <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
+      <div class="form-col-2">
+
+        <%= render partial: "shared/avatar_big", local: { current_user: current_user }%>
+
         <%= f.label "Upload Avatar Image" %><br>
         <%= f.file_field :avatar_pic %><br>
-        <%= f.submit "Submit" %><br>
       </div>
-      <div class="form-col-2">
+      <div class="form-col-1">
         <%= f.label "User Name" %>
         <%= f.text_field :user_name, id: 'user_name' %><br>  
         <%= f.label "Email" %>
@@ -18,6 +19,7 @@
         <%= f.password_field :password_confirmation,  id: 'reg_password_confirm' %><br>
         <%= f.label "Admin?", name: 'admin_check', id: 'admin_check' %>
         <%= f.check_box:admin %><br>
+        <%= f.submit "Submit" %><br>
       </div>
     </div>
   <% end %>
