Complete layout of product show card text layout and added review count

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,16 +1,18 @@
  
 <div class="product-show-flex">
 
-  <div class="review-box1">
+  <div class="product-box1">
     <%= link_to "\u2039", @product.previous, class: "previous-next previous round" %>
   </div>
 
-  <div class="review-box2">
-    <%= render partial: "shared/product-card-show", locals: { product: @product } %>
-  </div>
+  <div class="product-box2">
 
-  <div class="review-box3">
-    <%= link_to "\u203A", @product.next, class: "previous-next next round review-box3" %>
+    <%= render partial: "shared/product-card-show", locals: { product: @product, number_reviews: @number_reviews } %>
+  </div>
+  
+
+  <div class="product-box3">
+    <%= link_to "\u203A", @product.next, class: "previous-next next round" %>
   </div>
 
 </div>
