--- a/app/views/shared/_product_form.html.erb
+++ b/app/views/shared/_product_form.html.erb
@@ -1,13 +1,22 @@
 <%= render "shared/errors", :object => @product %>
 
-<%= form_for @product do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-    <%= f.label :country %>
-    <%= f.text_field :country %>
-    <%= f.label :product_photo %>
-    <%= f.file_field :product_photo %>
-    <%= f.submit  %>
+<div class="product-form-flex">
+  <div class="product-col-2">  
+    <%= form_for @product do |f| %>
+      <%= f.label :name %>:  
+      <%= f.text_field :name %><br>
+      <%= f.label :price %>: $
+      <%= f.text_field :price %><br>
+      <%= f.label :country %>: 
+      <%= f.text_field :country %><br>
+  </div>
+    <div class="product-col-1">
+
+      <%= render partial: "shared/product_image_big", locals: { product: @product } %>
+
+      <p><%= f.label :product_photo %></p>
+      <p><%= f.file_field :product_photo %></p>
+      <p><%= f.submit  %></p>
+    </div>
   <% end %>
+</div>
