--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,8 @@
-<h1 class="centered-header">Our Products</h1>
+<h1 class="center">Our Products</h1>
 
 <% if current_user && current_user.admin %>
   <div class="margin-spacer admin-card-1btn">
-    <div class="centered-header">
+    <div class="center">
       <h3>Admin Only</h3>
     </div>
     <p><%= link_to "Create new product", new_product_path, class: "btn btn-success" %></p>
