--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,8 +8,8 @@
   <div class="product-box2">
 
     <%= render partial: "shared/product-card-show", locals: { product: @product, number_reviews: @number_reviews } %>
+
   </div>
-  
 
   <div class="product-box3">
     <%= link_to "\u203A", @product.next, class: "previous-next next round" %>
@@ -17,13 +17,13 @@
 
 </div>
 
-<div class="centered-header margin-spacer">
+<div class="center margin-spacer">
   <%= link_to "Add Your Review", new_product_review_path(@product), class: "btn btn-success" %>
 
 </div>
   <% if current_user && current_user.admin %>
     <div class="margin-spacer admin-card-2btn">
-      <div class="centered-header">
+      <div class="center">
         <h3>Admin Only</h3>
       </div>
       <p><%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %></p>
