--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="centered-header">Our Reviews</h1>
+<h1 class="center">Our Reviews</h1>
 
 <div class="reviews-container">
   <% if @reviews.any? %>
