--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -467,6 +467,10 @@ body::-webkit-scrollbar-thumb {
   margin-top: 10px;
 }
 
+.margin-text {
+  margin-top: -10px;
+}
+
 // Product Show Card flexbox & Review Show Flexbox
 
 .product-show-flex {
