Styling for text box on review create and edit partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -471,6 +471,12 @@ body::-webkit-scrollbar-thumb {
   margin-top: -10px;
 }
 
+.review-form-center {
+  display: block;
+  margin: 0 auto;
+  // margin-right: auto;
+}
+
 // Product Show Card flexbox & Review Show Flexbox
 
 .product-show-flex {
