--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit review:</h1>
+<div class="center">
+  <h1>Edit review:</h1>
+</div>
 
-<%= render "shared/review_form" %>
+  <%= render "shared/review_form" %>
