--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new review:</h1>
+<div class="center">
+  <h1>Add Your Review:</h1>
+</div>
 
-<%= render "shared/review_form" %>
+  <%= render "shared/review_form" %>
